# smashgather

./: .gitmodules  README.md
app/: README.md  package.json  server.js  webpack.config.js  webpack.production.js
app/data/: database.js  schema.js  schema.json
app/js/components/: App.js
app/js/routes/: AppHomeRoute.js
app/public/: index.html
app/scripts/: create_db.sql
app/server/: dev.js  production.js
client/: .gitignore  CMakeLists.txt  README.md  extract_player_icons.cpp  smashgather.cpp  smashgather_tests.cpp  train_classifier.cpp  win_detector_tests.cpp
client/src/: CaptureScreenshot.cpp  CharacterDetails.h  Classifier.hpp  ContainsTemplate.cpp  ContainsTemplate.h  NetworkLayer.cpp  NetworkLayer.h  SaveWinScreen.cpp  SaveWinScreen.h  Util.cpp  Util.h  Util.hpp  WinDetector.cpp  WinDetector.h
server/: .babelrc  .gitignore  README.md  index.js  package.json  webpack.config.js  webpack.production.js
server/data/: schema.json
server/js/: app.js
server/js/components/: App.js  Character.js  CharacterScreen.js  Game.js  GameScreen.js  Smashgather.js  User.js  UserPicker.js  UserScreen.js
server/js/mutations/: UpdateGame.js
server/js/routes/: ViewerRoute.js
server/public/: index.html  smashgather.css
server/scripts/: create_db.sql  seed_db.sql
server/server/: dev.js  production.js
server/server/data/: database.js  schema.js
server/views/pages/: index.ejs
src/win_detector/: .gitignore  CMakeLists.txt  CharacterDetails.h  ContainsTemplate.cpp  ContainsTemplate.h  README.md  WinDetector.cpp  WinDetector.h  main.cpp  test.cpp  win_detector.cpp  win_detector_tests.cpp
src/win_detector/src/: CharacterDetails.h  ContainsTemplate.cpp  GetMSSIM.cpp  WinDetector.cpp
win_detector/: .gitignore  CMakeLists.txt  README.md  win_detector.cpp
win_detector/src/: CaptureScreenshot.cpp  CaptureScreenshot.h  GetMSSIM.h  NetworkLayer.h  WinDetector.cpp
