cmake_minimum_required(VERSION 2.8)
project(WinDetector)
find_package(OpenGL REQUIRED)
find_package(OpenCV REQUIRED)

if (APPLE)
  find_library(coreFoundation CoreFoundation)
  find_library(coreGraphics CoreGraphics)
  find_library(appServicesLib ApplicationServices)
  set(ExtraLibs ${appServicesLib} ${coreFoundation} ${coreGraphics})
endif (APPLE)

add_subdirectory(cpr)
include_directories(${CPR_INCLUDE_DIRS})

file(GLOB LIB_SOURCES src/*.cpp)
file(GLOB LIB_HEADERS src/*.h)
add_library(WinDetector ${LIB_SOURCES} ${LIB_HEADERS})
target_link_libraries(WinDetector ${CPR_LIBRARIES} ${OpenCV_LIBS})
add_executable(win_detector win_detector.cpp)
target_link_libraries(win_detector ${ExtraLibs} ${CPR_LIBRARIES} ${OpenCV_LIBS} WinDetector)
add_executable(win_detector_tests win_detector_tests.cpp)
target_link_libraries(win_detector_tests ${CPR_LIBRARIES} ${OpenCV_LIBS} WinDetector)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
