cmake_minimum_required(VERSION 2.8)
project(Smashgather)
find_package(OpenGL REQUIRED)
find_package(OpenCV REQUIRED)

if (APPLE)
  find_library(coreFoundation CoreFoundation)
  find_library(coreGraphics CoreGraphics)
  find_library(appServicesLib ApplicationServices)
  set(ExtraLibs ${appServicesLib} ${coreFoundation} ${coreGraphics})
endif (APPLE)

add_subdirectory(cpr)
include_directories(${CPR_INCLUDE_DIRS})

file(GLOB LIB_SOURCES src/*.cpp)
file(GLOB LIB_HEADERS src/*.h)
add_library(Smash ${LIB_SOURCES} ${LIB_HEADERS})
target_link_libraries(Smash ${CPR_LIBRARIES} ${OpenCV_LIBS})
add_executable(smashgather smashgather.cpp)
target_link_libraries(smashgather ${ExtraLibs} ${CPR_LIBRARIES} ${OpenCV_LIBS} Smash)
add_executable(smashgather_tests smashgather_tests.cpp)
target_link_libraries(smashgather_tests ${CPR_LIBRARIES} ${OpenCV_LIBS} Smash)
add_executable(extract_player_icons extract_player_icons.cpp)
target_link_libraries(extract_player_icons ${ExtraLibs} ${CPR_LIBRARIES} ${OpenCV_LIBS} Smash)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
